[package]
name = "summary_metrics"
version = "0.1.7"
edition = "2021"
authors = ["Miles Benton (miles.benton84@gmail.com)"]
description = "Calculate summary metrics from Nanopore sequencing summary data"

[profile.release]
opt-level = 3

[dependencies]
colored = "2.0"
clap = "3.0"
num-format = "^0.4.0"
prettytable = "^0.10.0"